# openscada-kium

./: ChangeLog  configure.ac  openscada.spec  openscada_mod.spec
data/LibsDB/: OscadaLibs.db  vcaBase.db  vcaElectroEls.db  vcaTest.db
data/ModelsDB/AGLKS/: Model.db  St.db  vca.db
data/ModelsDB/Boiler/: Model.db
src/moduls/daq/FT3/: Makefile.am  da.h  mod_FT3.cpp  mod_FT3.h
src/moduls/daq/JavaLikeCalc/: daq_JavaLikeCalc_la-func_analise.cpp
src/moduls/daq/MSO/: Makefile.am  MezTC.cpp  MezTC.h  MezTI.cpp  MezTI.h  MezTR.cpp  MezTR.h  MezTT.cpp  MezTT.h  MezTU.cpp  MezTU.h  da.h  moduls.cpp  mso_daq.cpp  mso_daq.h  mso_prt.cpp  mso_prt.h
src/moduls/daq/MSO/old/: mso_daq.cpp  mso_daq.h  mso_prt.cpp  mso_prt.h
src/moduls/transport/Sockets/: socket.cpp  socket.h
src/moduls/ui/WebCfgD/: VCAhtml.cpp  VCAjs.cpp
src/moduls/ui/WebVision/: VCAjs.cpp
